--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,16 +20,16 @@
         android:text="@string/preset_name"   Need to figure out what @string is
         -->
 
+
     <LinearLayout
-        app:layout_constraintTop_toBottomOf="Sound_Equalizer"
+        android:layout_width="match_parent"
+        android:layout_height="468dp"
+        android:layout_below="@+id/Sound_Equalizer"
+        android:layout_marginTop="8dp"
+        android:orientation="vertical"
         app:layout_constraintLeft_toLeftOf=""
         app:layout_constraintRight_toRightOf=""
-        android:layout_width="match_parent"
-        android:layout_height="391dp"
-        android:layout_below="@+id/Sound_Equalizer"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="79dp">
+        app:layout_constraintTop_toTopOf="@+id/guideline">
 
         <LinearLayout
             android:id="@+id/equalizerContainer"
@@ -44,6 +44,13 @@
                 android:layout_height="match_parent"
                 android:layout_weight="2"
                 android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textView1"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:textSize="12sp" />
 
                 <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper
                     android:layout_width="match_parent"
@@ -60,7 +67,7 @@
                 </com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper>
 
                 <TextView
-                    android:id="@+id/textView1"
+                    android:id="@+id/textView11"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
@@ -72,6 +79,13 @@
                 android:layout_height="match_parent"
                 android:layout_weight="2"
                 android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:textSize="12sp" />
 
                 <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper
                     android:layout_width="match_parent"
@@ -88,7 +102,7 @@
                 </com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper>
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/textView10"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
@@ -100,6 +114,13 @@
                 android:layout_height="match_parent"
                 android:layout_weight="2"
                 android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:textSize="12sp" />
 
                 <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper
                     android:layout_width="match_parent"
@@ -109,14 +130,14 @@
                     <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBar
                         android:id="@+id/seekBar3"
                         android:layout_width="0dp"
-                        android:layout_height="347dp"
+                        android:layout_height="374dp"
                         android:layout_marginTop="20dp"
                         android:padding="10dp"
                         app:seekBarRotation="CW270" />
                 </com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper>
 
                 <TextView
-                    android:id="@+id/textView3"
+                    android:id="@+id/textView6"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
@@ -128,6 +149,13 @@
                 android:layout_height="match_parent"
                 android:layout_weight="2"
                 android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:textSize="12sp" />
 
                 <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper
                     android:layout_width="match_parent"
@@ -137,14 +165,14 @@
                     <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBar
                         android:id="@+id/seekBar4"
                         android:layout_width="0dp"
-                        android:layout_height="0dp"
+                        android:layout_height="375dp"
                         android:layout_marginTop="20dp"
                         android:padding="10dp"
                         app:seekBarRotation="CW270" />
                 </com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper>
 
                 <TextView
-                    android:id="@+id/textView4"
+                    android:id="@+id/textView8"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
@@ -156,6 +184,13 @@
                 android:layout_height="match_parent"
                 android:layout_weight="2"
                 android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textView5"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:textSize="12sp" />
 
                 <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper
                     android:layout_width="match_parent"
@@ -172,7 +207,7 @@
                 </com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper>
 
                 <TextView
-                    android:id="@+id/textView5"
+                    android:id="@+id/textView9"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
