--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,8 @@
             android:layout_height="0dp"
             android:layout_weight="6"
             android:orientation="horizontal"
-            android:padding="3dp">
+            android:padding="3dp"
+            android:baselineAligned="false">
 
             <LinearLayout
                 android:layout_width="0dp"
