--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,30 +9,23 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="350dp"
-        android:layout_height="433dp"
+        android:layout_width="315dp"
+        android:layout_height="469dp"
         android:layout_below="@+id/spinner1"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner1"
-        app:layout_constraintVertical_bias="0.047">
+        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
+        app:layout_constraintTop_toBottomOf="@id/spinner1">
 
         <LinearLayout
             android:id="@+id/equalizerContainer"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="448dp"
             android:layout_weight="6"
+            android:baselineAligned="false"
             android:orientation="horizontal"
-            android:padding="3dp"
-            android:baselineAligned="false">
+            android:padding="3dp">
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -66,7 +59,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:text="60Hz"
+                    android:gravity="center"
+                    android:text="@string/hz1"
                     android:textAlignment="center"
                     android:textSize="12sp"
                     tools:text="60Hz" />
@@ -100,11 +94,12 @@
                 </com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper>
 
                 <TextView
-                    android:id="@+id/textView10"
+                    android:id="@+id/textView12"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:text="230Hz"
+                    android:gravity="center"
+                    android:text="@string/hz2"
                     android:textAlignment="center"
                     android:textSize="12sp"
                     tools:text="230Hz" />
@@ -142,7 +137,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:text="910Hz"
+                    android:gravity="center"
+                    android:text="@string/hz3"
                     android:textAlignment="center"
                     android:textSize="12sp"
                     tools:text="910Hz" />
@@ -176,11 +172,12 @@
                 </com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper>
 
                 <TextView
-                    android:id="@+id/textView8"
+                    android:id="@+id/textView14"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:text="3600Hz"
+                    android:gravity="center"
+                    android:text="@string/hz4"
                     android:textAlignment="center"
                     android:textSize="12sp"
                     tools:text="3600Hz" />
@@ -214,11 +211,12 @@
                 </com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper>
 
                 <TextView
-                    android:id="@+id/textView9"
+                    android:id="@+id/textView15"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:text="14000Hz"
+                    android:gravity="center"
+                    android:text="@string/hz5"
                     android:textAlignment="center"
                     android:textSize="12sp"
                     tools:text="14000Hz" />
@@ -258,11 +256,12 @@
 
     <Spinner
         android:id="@+id/spinner1"
-        android:layout_width="240dp"
+        android:layout_width="226dp"
         android:layout_height="33dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginLeft="4dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
+        android:entries="@array/preset_array"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -273,11 +272,70 @@
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/spinner1"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="35dp"
+        android:layout_height="480dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline">
+
+        <LinearLayout
+            android:layout_width="48dp"
+            android:layout_height="480dp"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="52dp"
+                android:layout_height="480dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textView21"
+                    android:layout_width="match_parent"
+                    android:layout_height="160dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="@string/highdb"
+                    android:textSize="12sp"
+                    app:layout_constraintBottom_toTopOf="@+id/textView22"
+                    tools:text="+15dB" />
+
+                <TextView
+                    android:id="@+id/textView23"
+                    android:layout_width="match_parent"
+                    android:layout_height="160dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="@string/lowdb"
+                    android:textSize="12sp"
+                    app:layout_constraintTop_toBottomOf="@+id/textView22"
+                    tools:text="-15dB" />
+
+                <TextView
+                    android:id="@+id/textView22"
+                    android:layout_width="match_parent"
+                    android:layout_height="160dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="@string/nodb"
+                    android:textSize="12sp"
+                    app:layout_constraintBottom_toTopOf="@+id/textView23"
+                    app:layout_constraintTop_toBottomOf="@+id/textView21"
+                    tools:text="0dB" />
+
+            </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
